--- a/uuv_control/uuv_control_cascaded_pids/package.xml
+++ b/uuv_control/uuv_control_cascaded_pids/package.xml
@@ -22,5 +22,5 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
 </package>
