--- a/uuv_control/uuv_thruster_manager/package.xml
+++ b/uuv_control/uuv_thruster_manager/package.xml
@@ -22,14 +22,14 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>python-yaml</exec_depend>
+  <exec_depend>python3-yaml</exec_depend>
   <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>uuv_assistants</exec_depend>
 
   <test_depend>rosunit</test_depend>
   <test_depend>rostest</test_depend>
-  <test_depend>python-numpy</test_depend>
+  <test_depend>python3-numpy</test_depend>
   <test_depend>uuv_assistants</test_depend>
   <test_depend>geometry_msgs</test_depend>
   <test_depend>joint_state_publisher</test_depend>
