--- a/uuv_teleop/package.xml
+++ b/uuv_teleop/package.xml
@@ -18,7 +18,7 @@
 
   <exec_depend>joy</exec_depend>
   <exec_depend>joy_teleop</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
